; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-file.c_freshen_packed_object.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-file.c_freshen_packed_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.pack_entry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@the_repository = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*)* @freshen_packed_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @freshen_packed_object(%struct.object_id* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.object_id*, align 8
  %4 = alloca %struct.pack_entry, align 8
  store %struct.object_id* %0, %struct.object_id** %3, align 8
  %5 = load i32, i32* @the_repository, align 4
  %6 = load %struct.object_id*, %struct.object_id** %3, align 8
  %7 = call i32 @find_pack_entry(i32 %5, %struct.object_id* %6, %struct.pack_entry* %4)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

10:                                               ; preds = %1
  %11 = getelementptr inbounds %struct.pack_entry, %struct.pack_entry* %4, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %29

17:                                               ; preds = %10
  %18 = getelementptr inbounds %struct.pack_entry, %struct.pack_entry* %4, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @freshen_file(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %29

25:                                               ; preds = %17
  %26 = getelementptr inbounds %struct.pack_entry, %struct.pack_entry* %4, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i32 1, i32* %28, align 4
  store i32 1, i32* %2, align 4
  br label %29

29:                                               ; preds = %25, %24, %16, %9
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @find_pack_entry(i32, %struct.object_id*, %struct.pack_entry*) #1

declare dso_local i32 @freshen_file(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
